# SalmanBot

./: .gitignore  README.md  discordReddit.py  fivePD.py  javaApp.py  keep_alive.py  logs.txt  main.py  pyproject.toml  redditClass.py  reddit_posts.txt  sb_commands.py  sb_tasks.py
class/: commands.py  db.py  logs.py  reddit.py  runDiscord.py  tasks.py  tempChannel.py
