[tool.poetry]
name = "sdb"
version = "0.1.0"
description = ""
authors = ["MrHoora"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
gtts = "^2.2.2"
gTTS-token = "^1.1.4"
SpeechRecognition = "^3.8.1"
PyNaCl = "^1.4.0"
eyed3 = "^0.9.6"
youtube_dl = "^2021.2.4"
ffmpeg = "^1.4"
praw = "^7.1.3"
asyncpraw = "^7.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
